--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,30 @@
 image: openjdk:8-jdk
 
 variables:
-    ANDROID_COMPILE_SDK: "26"
-    ANDROID_BUILD_TOOLS: "26.0.2"
-    ANDROID_SDK_TOOLS: "24.4.1"
+    ANDROID_COMPILE_SDK: "28"
+    ANDROID_BUILD_TOOLS: "28.0.3"
+    ANDROID_SDK_TOOLS: "4333796"
 
 before_script:
     - apt-get --quiet update --yes
     - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
-    - wget --quiet --output-document=android-sdk.tgz https://dl.google.com/android/android-sdk_r${ANDROID_SDK_TOOLS}-linux.tgz
-    - tar --extract --gzip --file=android-sdk.tgz
-    - echo y | android-sdk-linux/tools/android --silent update sdk --no-ui --all --filter android-${ANDROID_COMPILE_SDK}
-    - echo y | android-sdk-linux/tools/android --silent update sdk --no-ui --all --filter platform-tools
-    - echo y | android-sdk-linux/tools/android --silent update sdk --no-ui --all --filter build-tools-${ANDROID_BUILD_TOOLS}
-    - echo y | android-sdk-linux/tools/android --silent update sdk --no-ui --all --filter extra-android-m2repository
-    - echo y | android-sdk-linux/tools/android --silent update sdk --no-ui --all --filter extra-google-google_play_services
-    - echo y | android-sdk-linux/tools/android --silent update sdk --no-ui --all --filter extra-google-m2repository
+    - wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
+    - unzip -d android-sdk-linux android-sdk.zip
+    - echo y | android-sdk-linux/tools/bin/sdkmanager "platforms;android-${ANDROID_COMPILE_SDK}" >/dev/null
+    - echo y | android-sdk-linux/tools/bin/sdkmanager "platform-tools" >/dev/null
+    - echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
     - export ANDROID_HOME=$PWD/android-sdk-linux
     - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
-    - chmod +x ./gradlew
+    # temporarily disable checking for EPIPE error and use yes to accept all licenses
+    - set +o pipefail
+    - yes | android-sdk-linux/tools/bin/sdkmanager --licenses
+    - set -o pipefail
     - chmod +x ./fdroidPrep.sh
-    - echo "apiSecret=$FABRIC_APISECRET" >> ./app/fabric.properties
-    - echo "apiKey=$FABRIC_APIKEY" >> ./app/fabric.properties
-    - echo "<?xml version=\"1.0\" encoding=\"utf-8\"?>" >> ./app/src/play/res/values/api_key.xml
-    - echo "<resources>" >> ./app/src/play/res/values/api_key.xml
-    - echo "<string name=\"google_maps_key\">$MAPS_KEY</string>" >> ./app/src/play/res/values/api_key.xml
-    - echo "</resources>" >> ./app/src/play/res/values/api_key.xml
+    - chmod +x ./gradlew
+    - echo "FabricApiKey=$FABRIC_APIKEY" >> ./gradle.properties
+    - echo "GoogleApiKey=$MAPS_KEY" >> ./gradle.properties
+    - echo "android.enableJetifier=true" >> ./gradle.properties
+    - echo "android.useAndroidX=true" >> ./gradle.properties
 stages:
     - build
 
@@ -35,7 +34,7 @@ buildPlay:
     - ./gradlew assemblePlayDebug
     artifacts:
         paths:
-        - app/build/outputs/
+        - app/build/outputs/apk/play/debug/app-play-debug.apk
 
 buildFdroid:
     stage: build
@@ -44,4 +43,4 @@ buildFdroid:
     - ./gradlew assembleFdroidDebug
     artifacts:
         paths:
-        - app/build/outputs/
+        - app/build/outputs/apk/fdroid/debug/app-fdroid-debug.apk
